tests/NormalTests/paczka1/fuzzy1/67597003.err
Error in line 3: 8G4SBL1a S569 6,6
Error in line 5: S569 S310 60,4
Error in line 11: sTRHUY S569 55,1
Error in line 6: 8G4SBL1a A506 90,1
Error in line 23: zXKGY6E S569 010,3
Error in line 24: zXKGY6E S920 38,90
Error in line 15: zXKGY6E S569 44,0
Error in line 22: OO5U8x S920 70,2
Error in line 25: zXKGY6E S920 190,0
